overflow fix

--- a/sites/all/themes/custom/thinkabit/css/thinkabit.hacks.css
+++ b/sites/all/themes/custom/thinkabit/css/thinkabit.hacks.css
@@ -20,6 +20,7 @@
 	background-color: transparent !important;
 	display: inline-block !important;
 	max-height: 660px;
+	overflow: hidden;
 }
 .field--hero-image {
 	text-align: center;
